Migrate pxf-hdfs to Spring Boot (#363)
- Update top level build.gradle to include pxf-hdfs
- Add new build.gradle for pxf-hdfs
- all existing unit tests should be ported to junit 5
- make test on java 11

Co-authored-by: Francisco Guerrero <aguerrero@pivotal.io>
Co-authored-by: Alexander Denissov <adenissov@pivotal.io>